--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "drupal-composer/drupal-scaffold": "^2.0.1",
         "cweagans/composer-patches": "~1.0",
         "drupal/core": "~8.0",
-        "drush/drush": "~9.0",
+        "drush/drush": "^9.2",
         "drupal/console": "~1.0",
         "drupal/group": "^1.0@RC",
         "drupal/devel": "^1.2",
